2005/04/27	ebassi

	* doctypes: fix typo for GKeyFileFlags.

2005/04/27	ebassi

	* Glib.xs, GError.xs, doctypes, gperl-gtypes.c, gperl-gtypes.h,
	gperl.h, Makefile.PL, MANIFEST, typemap, GKeyFile.xs, t/g.t: bind,
	document and test GKeyFile, a parser for .ini-like files.

2005/04/25	kaffeetisch

	* Glib.pm, META.yml, Makefile.PL, NEWS, README: Unstable release
	1.090.

2005/04/19	rwmcfa1

	* GenPod.pm: fixed long running auto list of enums/flags problems.
	enums were only getting added when there was info assocaited with them,
	flags could always make it through. there was also a bug which allowed
	enums and flags in parent properties to be listed in children.

2005/04/17	kaffeetisch

	* Glib.pm, META.yml, NEWS, README: Merge from stable-1-08.

2005/04/04	muppetman

	* GSignal.xs, t/signal_emission_hooks.t, MANIFEST:
	Bind, document, and test g_signal_add_emission_hook and
	g_signal_remove_emission_hook, with a little refactoring in
	GSignal.xs.

2005/03/24	kaffeetisch

	* GType.xs, GValue.xs, gperl.h: Add API that allows binding
	developers to specify conversion functions when registering
	fundamental types that are to be used by gperl_value_from_sv() and
	gperl_sv_from_value().  gperl_register_fundamental_full() is the
	new function that takes a GPerlValueWrapperClass struct which
	contains a GPerlValueWrapFunc and a GPerlValueUnwrapFunc.
	gperl_fundamental_wrapper_class_from_type() can be used to
	retrieve the GPerlValueWrapperClass that corresponds to a given
	GType.

	* GBoxed.xs, GType.xs: Document that gperl_register_boxed() and
	gperl_register_fundamental_full() assume that the wrapper class is
	statically allocated and that it will always be alive.

2005/03/07	kaffeetisch

	* Glib.pm, Makefile.PL, META.yml, NEWS, README: Stable release
	1.080.

2005/03/06	kaffeetisch

	* GBoxed.xs: Fix a typo.

2005/02/28	kaffeetisch

	* Glib.pm, META.yml, Makefile.PL, NEWS, README: Unstable release
	1.074.

2005/02/15 15:48 (-0500) rwmcfa1
